Segfault when closing gedit while still loading a file.
To reproduce:
- Create a big file
- Open this big file in gedit
- While still loading close gedit using the X button
I get the following backtrace:
#0 0x00007ffff7f2e4c3 in gedit_metadata_manager_get (location=<optimised out>, key=key@entry=0x7ffff7f58e83 "metadata::gedit-position") at ../../../../jhbuild/checkout/gedit/gedit/gedit-metadata-manager.c:314
#1 0x00007ffff7f1e5b9 in get_metadata_from_metadata_manager (key=0x7ffff7f58e83 "metadata::gedit-position", doc=0x5555555a4510) at ../../../../jhbuild/checkout/gedit/gedit/gedit-document.c:1626
#2 gedit_document_get_metadata (doc=doc@entry=0x5555555a4510, key=key@entry=0x7ffff7f58e83 "metadata::gedit-position") at ../../../../jhbuild/checkout/gedit/gedit/gedit-document.c:1696
#3 0x00007ffff7f40c62 in goto_line (loading_task=0x5555557d7960) at ../../../../jhbuild/checkout/gedit/gedit/gedit-tab.c:1693
#4 successful_load (loading_task=loading_task@entry=0x555555d8c280) at ../../../../jhbuild/checkout/gedit/gedit/gedit-tab.c:1781
#5 0x00007ffff7f411aa in load_cb (loader=0x555555c1c7a0, result=0x555555d8c340, loading_task=loading_task@entry=0x555555d8c280) at ../../../../jhbuild/checkout/gedit/gedit/gedit-tab.c:1973
#6 0x00007ffff7c48f79 in g_task_return_now (task=0x555555d8c340) at ../../../../jhbuild/checkout/glib/gio/gtask.c:1209
#7 0x00007ffff7c49a93 in g_task_return (task=0x555555d8c340, type=<optimised out>) at ../../../../jhbuild/checkout/glib/gio/gtask.c:1278
#8 0x00007ffff7c4a30e in g_task_return (type=G_TASK_RETURN_SUCCESS, task=<optimised out>) at ../../../../jhbuild/checkout/glib/gio/gtask.c:1791
#9 g_task_return_boolean (task=<optimised out>, result=<optimised out>) at ../../../../jhbuild/checkout/glib/gio/gtask.c:1795
#10 0x00007ffff6f58afa in close_input_stream_cb (source_object=<optimised out>, result=0x555555bdae10, user_data=<optimised out>) at gtksourcefileloader.c:527
#11 0x00007ffff7c1a15d in async_ready_close_callback_wrapper (source_object=0x555555a44390, res=0x555555bdae10, user_data=0x555555d8c340) at ../../../../jhbuild/checkout/glib/gio/ginputstream.c:546
#12 0x00007ffff7c48f79 in g_task_return_now (task=0x555555bdae10) at ../../../../jhbuild/checkout/glib/gio/gtask.c:1209
#13 0x00007ffff7c48fb9 in complete_in_idle_cb (task=0x555555bdae10) at ../../../../jhbuild/checkout/glib/gio/gtask.c:1223
#14 0x00007ffff7e16738 in g_main_dispatch (context=0x5555555abab0) at ../../../../jhbuild/checkout/glib/glib/gmain.c:3193
#15 g_main_context_dispatch (context=context@entry=0x5555555abab0) at ../../../../jhbuild/checkout/glib/glib/gmain.c:3858
#16 0x00007ffff7e16b28 in g_main_context_iterate (context=context@entry=0x5555555abab0, block=block@entry=0, dispatch=dispatch@entry=1, self=<optimised out>) at ../../../../jhbuild/checkout/glib/glib/gmain.c:3931
#17 0x00007ffff7e16bbc in g_main_context_iteration (context=context@entry=0x5555555abab0, may_block=may_block@entry=0) at ../../../../jhbuild/checkout/glib/glib/gmain.c:3992
#18 0x00007ffff7c7575a in g_application_run (application=0x5555555891e0, argc=<optimised out>, argv=0x7fffffffd798) at ../../../../jhbuild/checkout/glib/gio/gapplication.c:2541
#19 0x0000555555555214 in main (argc=2, argv=0x7fffffffd798) at ../../../../jhbuild/checkout/gedit/gedit/gedit.c:150