gedit/gedit-app-private.h
@@ -22,6 +22,7 @@
 #define GEDIT_APP_PRIVATE_H
 
 #include "gedit-app.h"
+#include "gedit-metadata-manager.h"
 #include "gedit-settings.h"
 #include "gedit-menu-extension.h"
 
@@ -47,6 +48,8 @@ void			 _gedit_app_set_default_page_setup	(GeditApp         *app,
 GtkPrintSettings	*_gedit_app_get_default_print_settings	(GeditApp         *app);
 void			 _gedit_app_set_default_print_settings	(GeditApp         *app,
 								 GtkPrintSettings *settings);
+
+GeditMetadataManager	*_gedit_app_get_metadata_manager	(GeditApp  *app);
 
 GeditSettings		*_gedit_app_get_settings		(GeditApp  *app);
 
